# brongan.com

./: .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Justfile  README.md  Trunk.toml  develop.sh  flake.nix  fly.toml  index.html  index.scss  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: format-and-build.yml
app/: Cargo.toml
app/src/: analytics.rs  catscii.rs  chip8.rs  ishihara.rs  ishihara_form.rs  lib.rs  locat.rs  mandelbrot.rs  mandelbrot_server.rs  point2d.rs  state.rs
app/src/chip8/: component.rs  cpu.rs  emulator.rs  lib.rs  quirks.rs  screen.rs
app/src/chip8/component/: beep.rs  chip8_disassembler.rs  colors.rs  controls.rs  cpu_state.rs  debugger.rs  emulator_info.rs  keypad_component.rs  keypad_viewer.rs  memory_viewer.rs  quirk_settings.rs  stack_viewer.rs
app/src/chip8/emulator/: cpu.rs  cpu_test.rs  emulator.rs  emulator_tests.rs
app/src/game_of_life/: basic.frag  basic.vert  mod.rs  universe.rs  webgl.rs
app/tests/: emulator_integration.rs
cert/: fullchain.pem  privkey.pem
client/: Cargo.toml  analytics.scss  index.html  ishihara.scss  main.scss
client/src/: analytics_component.rs  catscii_component.rs  color.rs  ishihara.rs  ishihara_component.rs  ishihara_form.rs  lib.rs  main.rs  mandelbrot.rs  mandelbrot_component.rs
client/src/game_of_life/: mod.rs  universe.rs  util.rs  webgl.rs
client/src/styles/: analytics.scss
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
ishihara/: .gitignore  Cargo.toml
ishihara/src/: color.rs  lib.rs  main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: lib.rs
public/: manifest.json  robots.txt
root/: Cargo.toml  index.html  index.scss  ishihara.scss  wasm-game-of-life.scss
root/src/: ishihara.rs  ishihara_component.rs  ishihara_form.rs  lib.rs  mandelbrot_component.rs
server/: Cargo.toml
server/src/: analytics.rs  catscii.rs  fileserv.rs  locat.rs  main.rs  mandelbrot.rs
shared/: Cargo.toml
shared/src/: lib.rs  mandelbrot.rs
src/: analytics.rs  catscii.rs  color.rs  fileserve.rs  ishihara.rs  ishihara_form.rs  lib.rs  locat.rs  main.rs  mandelbrot.rs  mandelbrot_backend.rs  point2d.rs  root.rs  routes.rs  server.rs  utils.rs  webgl.rs
src/game_of_life/: mod.rs  universe.rs  util.rs  webgl.rs
src/routes/: analytics_component.rs  catscii_component.rs  ishihara_component.rs  mandelbrot_component.rs
style/: analytics.scss  catscii.scss  main.scss
style/base/: _typography.scss
style/components/: _analytics.scss  _catscii.scss  _chip8.scss  _game_of_life.scss  _ishihara.scss  _mandelbrot.scss  _navigation.scss
style/layout/: _layout.scss
style/themes/: _variables.scss
tests/: web.rs
wasm-game-of-life/: .gitignore  Cargo.toml  LICENSE_MIT
wasm-game-of-life/benches/: bench.rs
wasm-game-of-life/src/: lib.rs  main.rs  universe.rs  webgl.rs
