[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.8", features = ["nightly"] }
leptos_meta = { version = "0.8"}
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8" }

anyhow = "1.0"
artem = { version = "3.0", default-features = false }
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
cfg-if = "1"
color-eyre = "0.6.5"
console_error_panic_hook = "0.1.7"
console_log = "1"
fixedbitset = "0.5"
gloo-file = { version = "0.3", features = ["futures"] }
http = "1"
image = { version = "0.25" }
imageproc = "0.25"
leptos-use = "0.16.3"
log = "0.4.28"
maxminddb = "0.27.0"
nom = "7.0"
num = { version = "0.4", features = ["serde"] }
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
rand = "0.9"
rayon = { version = "1.11.0"}
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls-webpki-roots"]}
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.1.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rusqlite = { version = "0.7.0" }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.7", features = ["full"] }
tracing = { version = "0.1" }
wasm-bindgen = "=0.2.104"

[profile.test]
opt-level = 3

# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "brongan_com"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:8080"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

