[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

anyhow.workspace = true
cfg-if.workspace = true
color-eyre.workspace = true
fixedbitset.workspace = true
gloo-file.workspace = true
http.workspace = true
image.workspace = true
imageproc.workspace = true
js-sys = { version = "0.3"}
leptos-use.workspace = true
log.workspace = true
nom.workspace = true
num.workspace = true
rand.workspace = true
reqwest.workspace = true
rusttype = "0.9"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-logger = {version = "0.2" }

artem = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
maxminddb = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }
simple_profiler = { git = "https://github.com/BrianPAmsler/simple_profiler.git", version = "0.1.0" }

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioContextState",
  "AudioDestinationNode",
  "AudioParam",
  "Blob",
  "File",
  "FileList",
  "GainNode",
  "HtmlInputElement",
  "OscillatorNode",
  "OscillatorType",
  'CanvasRenderingContext2d',
  'Document',
  'DomRect',
  'Element',
  'EventTarget',
  'FormData',
  'HtmlCanvasElement',
  'HtmlFormElement',
  'ImageData',
  'Request',
  'SubmitEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
]

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos-use/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:tokio", "dep:rusqlite", "dep:maxminddb", "dep:opentelemetry", "dep:tokio-rusqlite", "dep:artem", "dep:rayon", "dep:axum"]

