[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
fixedbitset = "0.4"
getrandom = { version = "0.2", features = ["js"] }
gloo-events = "0.1"
gloo-net = "0.2"
gloo-timers = "0.2"
image = "0.24"
imageproc = "0.23"
js-sys = "0.3"
log = "0.4"
nom = "7.0"
num = "0.4"
rand = "0.8"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared/" }
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "=0.2.106"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-router = { version = "0.17.0" }

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'DomRect',
  'Element',
  'EventTarget',
  'FormData',
  'HtmlCanvasElement',
  'HtmlFormElement',
  'ImageData',
  'Request',
  'SubmitEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
]

