[package]
name = "ishihara"
version = "0.1.0"
authors = ["Brennan Tracy <brennantracy4@gmail.com>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
getrandom.workspace = true
gloo-events.workspace = true
image.workspace = true
imageproc.workspace = true
log.workspace = true
nom.workspace = true
num.workspace = true
rand.workspace = true
rayon.workspace = true
rusttype = "0.9"
strum.workspace = true
strum_macros.workspace = true
wasm-logger.workspace = true
yew.workspace = true
