[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-render = "0.1"
gloo-timers = "0.2"
js-sys = "0.3"
num = "0.4"
strum = "0.24"
strum_macros = "0.24"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

ishihara = { path = "../ishihara" }
mandelbrot = { path = "../mandelbrot" }
wasm-game-of-life = { path = "../wasm-game-of-life" }


[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'FormData',
  'HtmlFormElement',
  'HtmlCanvasElement',
  'ImageData',
  'SubmitEvent'
]

