[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-render.workspace = true
gloo-timers.workspace = true
ishihara = { path = "../ishihara" }
js-sys.workspace = true
mandelbrot = { path = "../mandelbrot" }
num.workspace = true
strum.workspace = true
strum_macros.workspace = true
wasm-bindgen.workspace = true
wasm-game-of-life = { path = "../wasm-game-of-life" }
wasm-logger.workspace = true
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'EventTarget',
  'FormData',
  'HtmlFormElement',
  'HtmlCanvasElement',
  'ImageData',
  'SubmitEvent'
]

