[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
artem = { version = "1.2", default-features = false }
async-rustls = "0.4.0"
axum = { version = "0.6.16", features = ["macros"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4.2", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.28"
futures-util = "0.3.28"
num = "0.4"
base64 = "0.13"
hyper = "0.14.27"
image = "0.24"
maxminddb = "0.23.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
pretty-hex = "0.3.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rusqlite = { version = "0.29.0" }
libsqlite3-sys = { version = "*", features = ["bundled"] }
sentry = { version = "0.31", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0"}
shared = { path = "../shared/" }
thiserror = "1.0.40"
tokio = { version = "1.28", features = ["full", "fs", "test-util"] }
tokio-rusqlite = "0.4.0"
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

