[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

anyhow.workspace = true
async-rustls = { version = "0.4.0" }
axum-server = { version = "0.6", features = ["tls-rustls"] }
axum.workspace = true
clap = { version = "4.2", features = ["derive"] }
leptos_router.workspace = true
log.workspace = true
nom.workspace = true
opentelemetry-honeycomb.workspace = true
opentelemetry.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sentry = { version = "0.31", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic"] }
serde.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing.workspace = true

