[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Brennan Tracy <brennantracy4@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.4"
getrandom.workspace = true
gloo-events.workspace = true
gloo-render.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
log.workspace = true
rand.workspace = true
wasm-bindgen.workspace = true
wasm-logger.workspace = true
yew.workspace = true

[dev-dependencies]
criterion = "^0.3"
pprof = { version = "^0.3", features = ["flamegraph"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'Document',
  'DomRect',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'InputEvent',
  'MouseEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window',
]
